error_output.txt
TD_polynomes.c:9:17: error: expected ‘:’, ‘,’, ‘;’, ‘}’ or ‘__attribute__’ before ‘=’ token
     int * coeff = (int *) malloc (degree * sizeof(int));
                 ^
TD_polynomes.c: In function ‘new_polynome’:
TD_polynomes.c:19:24: error: ‘polynome {aka struct <anonymous>}’ has no member named ‘coeff’
         newest_polynome->coeff[i] = 1;
                        ^~
TD_polynomes.c: In function ‘main’:
TD_polynomes.c:27:20: error: called object ‘new_polynome’ is not a function or function pointer
     new_polynome = new_polynome(5);
                    ^~~~~~~~~~~~
TD_polynomes.c:26:16: note: declared here
     polynome * new_polynome = (polynome *) malloc (sizeof(polynome));
                ^~~~~~~~~~~~
TD_polynomes.c:30:34: error: ‘polynome {aka struct <anonymous>}’ has no member named ‘coeff’
         printf("%d", new_polynome->coeff[i]);
                                  ^~
TD_polynomes.c:32:22: error: ‘polynome {aka struct <anonymous>}’ has no member named ‘coeff’
     free(new_polynome->coeff);
                      ^~
